kubernetes/main/apps/networking/traefik/addons/external-services/main-redirect.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-redirect
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-traefik-middleware-chain-no-auth@kubernetescrd,networking-traefik-middleware-redirect-nextcloud@kubernetescrd"
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host "${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: main-redirect
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: main-redirect
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: main-redirect
subsets:
  - addresses:
      - ip: 192.168.254.249
    ports:
      - name: http
        port: 80
        protocol: TCP
