kubernetes/main/apps/networking/traefik/addons/external-services/plex-ext.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ext
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN_INTERNAL}"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-traefik-middleware-chain-no-auth@kubernetescrd"
spec:
  ingressClassName: traefik-internal
  rules:
    - host: &host "plex-ext.${SECRET_DOMAIN_INTERNAL}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-ext
                port:
                  name: http
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Service
metadata:
  name: plex-ext
  annotations:
    teleport.dev/name: plex
    traefik.ingress.kubernetes.io/service.serversscheme: https
  labels:
    teleport: enabled
spec:
  type: ExternalName
  externalName: ${SECRET_PLEX_SERVER}
  ports:
    - name: http
      port: 443
