kubernetes/main/apps/networking/traefik/addons/external-services/pterodactyl-wing01.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pterodactyl-wing01
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-traefik-middleware-chain-pterodactyl@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: "pterodactyl-wing01.${SECRET_DOMAIN_INTERNAL}"
      http:
        paths:
          - backend:
              service:
                name: pterodactyl-wing01
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "pterodactyl-wing01.${SECRET_DOMAIN_INTERNAL}"
---
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-wing01
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pterodactyl-wing01
subsets:
  - addresses:
      - ip: 192.168.250.11
    ports:
      - name: http
        port: 443
        protocol: TCP
