kubernetes/main/apps/networking/traefik/addons/external-services/ssp.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-traefik-middleware-chain-no-auth@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: "ssp.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: ssp
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "ssp.${SECRET_DOMAIN}"
---
apiVersion: v1
kind: Service
metadata:
  name: ssp
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ssp
subsets:
  - addresses:
      - ip: 192.168.250.35
    ports:
      - name: http
        port: 80
        protocol: TCP
